tests/type_tests/negatives/maybe_map_return_type.py
from zen import Maybe, Just


def test_just() -> Maybe[int]:
	return Just(1).map(str)
